# ai-policy-analyzer

./: .gitignore  README.md
backend/: README.md  TESTING.md  agent.py  check_python.py  config.py  debug_rag.py  install_data_gemma.py  main.py  models.py  pyproject.toml  run.py  sample_document.txt  test_backend.py  test_direct_api.py  test_env.py  test_policy.txt  test_with_document.py  test_with_document_fast.py
backend/tests/: TESTING.md  test_workflow.py  test_workflow_fast.py
backend/tools/: __init__.py  data_commons_tool.py  rag_tool.py  tavily_tool.py
backend/utils/: __init__.py  document_processor.py
evals/: .gitignore  README.md  golden_dataset_evaluation.py  pyproject.toml  setup_evaluation.py
evals/policy_documents/: README.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  DetailsPanel.tsx  FileUpload.tsx  MainPanel.tsx  PolicyPrismApp.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/types/: index.ts
